[tool.poetry]
name = "adwibids"
version = "0.1.0"
description = ""
authors = ["Tristan Kuehn <tkuehn@uwo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
attrs = "^22.1.0"
pandas = "^1.5.0"
cbor2 = "^5.4.3"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.4"
mypy = "^0.982"
black = "^22.10.0"
pandas-stubs = "^1.5.0.221012"

[tool.poetry.scripts]
adwi_bids = 'adwibids.adwibids:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
